# papyrus

./: .gitattributes  .gitignore  .licenseguardrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  ROLLBACK.md
docs/plans/: 2026-03-07-papyrus-design.md  2026-03-07-phase-1-scaffold-and-oracle-implementation.md  2026-03-08-phase-3-smart-outline-and-api-implementation.md  2026-03-08-phase-4-commonmark-renderer-implementation.md  2026-03-08-phase-5-cli-interface-implementation.md  2026-03-09-crates-io-release-design.md  2026-03-09-crates-io-release-implementation.md  2026-03-09-position-aware-extraction-design.md  2026-03-09-position-aware-extraction-implementation.md  papyrus-status-and-limitations.md  phase-1-scaffold-and-oracle.md  phase-1-verification-log.md  phase-2-low-level-extraction.md  phase-3-smart-outline-and-api.md  phase-3-verification-log.md  phase-4-commonmark-renderer.md  phase-4-verification-log.md  phase-5-cli-interface.md  phase-5-verification-log.md
papyrus-cli/: Cargo.toml
papyrus-cli/src/: cli.rs  convert.rs  lib.rs  main.rs  run.rs  warning.rs
papyrus-cli/tests/: cli_integration.rs
papyrus-core/: Cargo.toml
papyrus-core/src/: lib.rs
papyrus-core/src/ast/: mod.rs
papyrus-core/src/detector/: mod.rs
papyrus-core/src/layout/: mod.rs
papyrus-core/src/parser/: mod.rs
papyrus-core/src/renderer/: mod.rs
papyrus-core/tests/: integration_extraction.rs  integration_markdown_roundtrip.rs  integration_phase3_pipeline.rs  module_surface.rs
tests/fixtures/: README.md  bold-italic.oracle.json  generate_fixtures.py  multi-heading.oracle.json  multi-page.oracle.json  simple.oracle.json  test_generate_fixtures.py
tests/integration/: attention-fixed.md  attention-v2.md  attention.md
tests/oracle/: extract_oracle.py  requirements.txt  test_baselines.py  test_extract_oracle.py
