[package]
name = "papyrus-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "papyrus"
path = "src/main.rs"

[dependencies]
papyrus-core = { path = "../papyrus-core" }
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
owo-colors = "4.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.13"
